force-app/main/default/objects/Approval_Request__c/Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>