force-app/main/default/objects/Approval_Request__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Admin</fullName>
            </value>
            <value>
                <fullName>Director of Operations</fullName>
            </value>
            <value>
                <fullName>Head of Sales</fullName>
            </value>
            <value>
                <fullName>Chief Sales Officer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>