force-app/main/default/objects/Approval_Request__c/fields/Assigned_Approver__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>