force-app/main/default/objects/Approval_Request__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Currency Management rate (CurrencyType.ConversionRate, foreign units per 1 AED) used to convert the requested price to AED. 1 for AED projects. Stored for audit.</description>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>