force-app/main/default/objects/Approval_Request__c/fields/Current_Cost_AED__c.field-meta.xml
<CustomField>
    <fullName>Current_Cost_AED__c</fullName>
    <description>Current unit Cost (AED) at the time the request was created.</description>
    <label>Current Cost (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>