force-app/main/default/objects/Approval_Request__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <description>Current unit price in the entered currency (Price_Currency__c) at the time the request was created.</description>
    <label>Current Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>