force-app/main/default/objects/Approval_Request__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <description>Current value of the field being changed (stored as text for flexibility)</description>
    <label>Current Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>