force-app/main/default/objects/Approval_Request__c/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>