force-app/main/default/objects/Approval_Request__c/fields/Field_To_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Update__c</fullName>
    <description>API Name of the field that needs to be updated (e.g., Registration_Fees__c)</description>
    <label>Field To Update</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>