force-app/main/default/objects/Approval_Request__c/fields/Is_Final_Step__c.field-meta.xml
<CustomField>
    <fullName>Is_Final_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final Step</label>
    <type>Checkbox</type>
</CustomField>