force-app/main/default/objects/Approval_Request__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Reason for requesting this change</description>
    <label>Justification</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>