force-app/main/default/objects/Approval_Request__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>API name of the parent object for this approval request.</description>
    <label>Parent Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>