force-app/main/default/objects/Approval_Request__c/fields/Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Id__c</fullName>
    <description>Id of the parent record this approval request applies to.</description>
    <label>Parent Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>