force-app/main/default/objects/Approval_Request__c/fields/Price_Currency__c.field-meta.xml
<CustomField>
    <fullName>Price_Currency__c</fullName>
    <description>Currency the requested unit price is entered in (AED, USD, or CHF), derived from the unit&apos;s project.</description>
    <label>Price Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>