force-app/main/default/objects/Approval_Request__c/fields/Profile_Changes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Profile_Changes_JSON__c</fullName>
    <description>JSON payload of broker Company Profile field changes submitted from the portal: [{field,label,oldValue,newValue}]. Read by AgencyProfileApprovalService on approval and by the comparison view. Only used for Request_Type = Agency Profile Update.</description>
    <label>Profile Changes (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>