force-app/main/default/objects/Approval_Request__c/fields/Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Type__c</fullName>
    <description>API Name of the related object (e.g., Opportunity, Account)</description>
    <label>Related Object Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>