force-app/main/default/objects/Approval_Request__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Stores the ID of the related record (Opportunity, Account, etc.) that this approval is for</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>