force-app/main/default/objects/Approval_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Change</fullName>
            </value>
            <value>
                <fullName>Discount Approval</fullName>
            </value>
            <value>
                <fullName>Credit Limit Change</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Plan Change</fullName>
            </value>
            <value>
                <fullName>Unit Price Change</fullName>
            </value>
            <value>
                <fullName>Share Deal</fullName>
            </value>
            <value>
                <fullName>Agency Profile Update</fullName>
            </value>
            <value>
                <fullName>Bank Detail Update</fullName>
            </value>
            <value>
                <fullName>Document Re-upload</fullName>
            </value>
            <value>
                <fullName>DLD Waver Request</fullName>
                <isActive>false</isActive>
                <label>DLD Waver Request</label>
            </value>
            <value>
                <fullName>Payment Plan Update Request</fullName>
                <isActive>false</isActive>
                <label>Payment Plan Update Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>