force-app/main/default/objects/Approval_Request__c/fields/Requested_Cost_AED__c.field-meta.xml
<CustomField>
    <fullName>Requested_Cost_AED__c</fullName>
    <description>Requested unit Cost (AED), computed from the requested price and the currency conversion rate. Applied to Unit.Cost_AED__c on approval.</description>
    <label>Requested Cost (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>