force-app/main/default/objects/Approval_Request__c/fields/Requested_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target Opportunity for an Invoice Receipt Transfer approval request.</description>
    <label>Requested Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice Receipt Transfer Requests</relationshipLabel>
    <relationshipName>Invoice_Receipt_Transfer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>