force-app/main/default/objects/Approval_Request__c/fields/Requested_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price__c</fullName>
    <description>Requested new unit price in the entered currency (Price_Currency__c).</description>
    <label>Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>