force-app/main/default/objects/Approval_Request__c/fields/Requested_Shared_RM__c.field-meta.xml
<CustomField>
    <fullName>Requested_Shared_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proposed Shared RM for a Share Deal approval request.</description>
    <label>Requested Shared RM</label>
    <!-- No lookup filter: Profile.Name filters fail for Sales Admin (no Profile visibility)
         and surface as "Value does not exist or does not match filter criteria".
         Apex ShareDealApprovalService enforces Sales Manager MIRA / Georgia. -->
    <referenceTo>User</referenceTo>
    <relationshipLabel>Share Deal Approval Requests</relationshipLabel>
    <relationshipName>Share_Deal_Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>