force-app/main/default/objects/Approval_Request__c/fields/Requested_Value__c.field-meta.xml
<CustomField>
    <fullName>Requested_Value__c</fullName>
    <description>Requested new value (stored as text for flexibility)</description>
    <label>Requested Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>