force-app/main/default/objects/Approval_Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>