force-app/main/default/objects/Approval_Request__c/fields/Unit_Title__c.field-meta.xml
<CustomField>
    <fullName>Unit_Title__c</fullName>
    <formula>IF (!ISBLANK(Unit__c), Unit__r.Project_Name_F__c &amp;&quot; - &quot;&amp; Unit__r.Title__c, &quot;Not Unit Related&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Title</label>
    <type>Text</type>
</CustomField>