force-app/main/default/objects/Approval_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assigned_Approver__c</columns>
    <columns>Justification__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Requester__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Unit_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>