force-app/main/default/objects/Approval_Request__c/listViews/Payment_Plan_Approvers_Approval_Request1.listView-meta.xml
<ListView>
    <fullName>Payment_Plan_Approvers_Approval_Request1</fullName>
    <filterScope>Queue</filterScope>
    <label>Payment Plan Approvers</label>
    <queue>Payment_Plan_Approvers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>